# McCloneLearnsC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
.VSCodeCounter/2023-06-27_01-16-51/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-06-27_01-17-24/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmake/: target_include.cmake  unit_test.cmake
core/: error.h  input.h  timer.h
graphics/: cube.h  events.h  input.h  renderer.c  renderer.h  shader_loader.c  shader_loader.h  timer.h  window.c  window.h
res/shaders/: fragment.frag  vertex.vert
scripts/: ut_runner.py
src/: CMakeLists.txt
src/allocators/: CMakeLists.txt
src/allocators/include/pool_allocator/: pool_allocator.h
src/allocators/src/: pool_allocator.c
src/allocators/tests/: CMakeLists.txt  pool_allocator_tests.c
src/core/: CMakeLists.txt  error.c  event.h  input.c  input.h  timer.c  timer.h
src/core/allocators/: CMakeLists.txt  pool_allocator.c  pool_allocator.h
src/core/allocators/tests/: CMakeLists.txt  pool_allocator_tests.c
src/core/ecs/: CMakeLists.txt  component.c  component.h  ecs_manager.c  ecs_manager.h  entity.c  entity.h  system.c  system.h
src/core/ecs/include/ecs/: entity.h  system.h
src/core/ecs/src/: entity.c  system.c
src/core/ecs/tests/: CMakeLists.txt  test.c
src/data_structures/: CMakeLists.txt
src/data_structures/include/data_structures/: hash_map.h
src/data_structures/src/: hash_map.c
src/data_structures/tests/: CMakeLists.txt  hash_map_tests.c
src/ecs/: CMakeLists.txt
src/ecs/include/ecs/: component.h  ecs_manager.h  entity.h  system.h
src/ecs/src/: component.c  ecs_manager.c  entity.c  system.c
src/ecs/tests/: CMakeLists.txt  entity_tests.c
src/graphics/: CMakeLists.txt  renderer.c  renderer.h  shader_loader.h  texture.c  texture.h  texture_atlas.c  window.c  window.h
src/graphics/include/graphics/: renderer.h  texture_atlas.h  window.h
src/graphics/src/: renderer.c  texture.c  texture_atlas.c  window.c
src/utils/: CMakeLists.txt  bmp_loader.c  bmp_loader.h  file_loader.c
src/utils/include/utils/: bmp_loader.h  error.h  file_loader.h  input.h
src/utils/src/: bmp_loader.c  error.c  file_loader.c  timer.c
src/world/: CMakeLists.txt  chunk_mesh.c  chunk_mesh.h  world.c  world.h
src/world/include/world/: world.h
src/world/src/: chunk_mesh.c  world.c
world/: world.h
